--- a/client/crowd-funding/package.json
+++ b/client/crowd-funding/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-stripe-checkout": "^2.6.3",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.10",
