--- a/client/crowd-funding/package.json
+++ b/client/crowd-funding/package.json
@@ -31,6 +31,7 @@
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.10",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
