--- a/client/crowd-funding/package.json
+++ b/client/crowd-funding/package.json
@@ -30,6 +30,7 @@
     "react-stripe-checkout": "^2.6.3",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.1",
     "styled-components": "^5.3.10",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
